UtahLiveDataTest/src/objects/SubmissionTracking__c.object
<CustomObject>
    <description>[Business] Tracks Application submission to Grants.gov</description>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentLink__c</fullName>
        <formula>IF(AttachmentId__c != NULL, HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; + AttachmentId__c, &apos;Download&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmissionId__c</fullName>
        <label>Submission Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmissionType__c</fullName>
        <label>Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Application</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Progress Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingType__c</fullName>
        <label>Tracking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IST: Submission Tracking</label>
    <nameField>
        <displayFormat>TRK-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>